--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -43,12 +43,11 @@
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
                 {{ if .User.IsAdmin }}
-		<li><a href="/test/new">Configuración</a></li>
+		<li><a href="/users/listForm">Usuarios</a></li>
                 {{end}}
 		{{ if .User.IsTeacher }}
 		<li><a href="/test/new">Crear Examen</a></li>
 		{{end}}
-		<li><a href="#">Usuarios</a></li>
 		<li role="separator" class="divider"></li>
 		<li><a href="/users/logout">Salir</a></li>
 	      </ul>
@@ -63,9 +62,9 @@
 
 
     <div class="container" id="content">
-      <div class="page-header">
+      <!--  <div class="page-header">
 	<h1>Chex <br><small>Gestor de test y examenes</small></h1>
-      </div>
+      </div>-->
       {{template "content" .}}
     </div>
 
