--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -12,9 +12,12 @@
  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/chexapi.js"></script>
+    <script src="/js/chexbind.js"></script>
     <script>
      $(document).ready(function () {
-       $('.dropdown-toggle').dropdown();
+       $(".dropdown-toggle").dropdown();
+       chexInit()
      })
     </script>
 
