--- a/appengine/users/tmpl/new.html
+++ b/appengine/users/tmpl/new.html
@@ -12,35 +12,35 @@
 
 
 
-
 <div class="panel col-md-12">
   <h2>Nuevo Usuario</h2>
 
   <div class="form-group col-md-6 col-md-offset-3">
-    <form>
+    <form id="userNewForm" method="post">
       <div class="form-group">
 	<label>Nombre y Apellidos</label>
-	<input type="text" class="form-control"  placeholder="...">
+	<input type="text" class="form-control" name="Name" placeholder="...">
       </div>
 
       <div class="form-group">
 	<label>Email</label>
-	<input type="email" class="form-control"  placeholder="Email de usuario">
+	<input type="email" class="form-control" name="Mail" placeholder="Email de usuario">
       </div>
 
       <div class="form-group">
 	<label>Rol</label>
-	<select class="form-control" id="role">
-	  <option>Administrador</option>
-	  <option>Profesor</option>
-	  <option>Estudiante</option>
+	<select class="form-control" id="Role" name="Role">
+	  <option value="15">Administrador</option>
+	  <option value="7">Profesor</option>
+	  <option value="3">Estudiante</option>
 	</select>
       </div>
 
       <div class="form-group text-right">
-	<button type="submit" class="btn btn-default">Crear</button>
+	<button type="button" id="userNewSubmit" class="btn btn-default">Crear</button>
       </div>
     </form>
+    <div id="userNewAlert" class="alert" role="alert">...</div>
   </div>
 
 {{end}}
