add logout handler to new routes

--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -52,7 +52,7 @@
 		<li><a href="/test/new">Crear Examen</a></li>
 		{{end}}
 		<li role="separator" class="divider"></li>
-		<li><a href="/users/logout">Salir</a></li>
+		<li><a href="/logout">Salir</a></li>
 	      </ul>
             </li>
 	  </ul>
