--- a/appengine/users/tmpl/list.html
+++ b/appengine/users/tmpl/list.html
@@ -3,8 +3,8 @@
 <div class="form-group col-md-12">
   <div class="row col-md-12 ">
     <ul class="nav nav-pills text-right">
-      <li role="presentation" class="active"><a href="/users/listForm">Listar</a></li>
-      <li role="presentation" ><a href="/users/newForm">Crear</a></li>
+      <li role="presentation" class="active"><a href="/users/all">Listar</a></li>
+      <li role="presentation" ><a href="/users/new">Crear</a></li>
     </ul>
   </div>
 </div>
