--- a/appengine/users/tmpl/view.html
+++ b/appengine/users/tmpl/view.html
@@ -1,6 +1,16 @@
 {{define "content"}}
 
 
+<div class="form-group col-md-12">
+  <div class="row col-md-12 ">
+    <ul class="nav nav-pills text-right">
+      <li role="presentation" ><a href="/users/all">Listar</a></li>
+      <li role="presentation" class="active"><a href="/users/new">Crear</a></li>
+    </ul>
+  </div>
+</div>
+
+
 
 <div class="panel col-md-12">
   <h2>{{.Content.Name}}</h2>
