--- a/appengine/users/tmpl/new.html
+++ b/appengine/users/tmpl/new.html
@@ -36,6 +36,11 @@
 	</select>
       </div>
 
+      <div class="form-group">
+	<label>Etiquetas</label>
+	<input type="email" class="form-control" name="Tags" placeholder="Escríbelas separadas por comas">
+      </div>
+
       <div class="form-group text-right">
 	<button type="button" id="userNewSubmit" class="btn btn-default">Crear</button>
       </div>
