--- a/appengine/users/tmpl/view.html
+++ b/appengine/users/tmpl/view.html
@@ -5,7 +5,8 @@
   <div class="row col-md-12 ">
     <ul class="nav nav-pills text-right">
       <li role="presentation" ><a href="/users/all">Listar</a></li>
-      <li role="presentation" class="active"><a href="/users/new">Crear</a></li>
+      <li role="presentation" ><a href="/users/new">Crear</a></li>
+      <li role="presentation" class="active"><a href="/users/edit?id={{.Content.Id}}">Editar</a></li>
     </ul>
   </div>
 </div>
