--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -45,10 +45,11 @@
             <li class="dropdown">
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
-                {{ if .User.IsAdmin }}
+                {{ if .User.IsAdmin}}
 		<li><a href="/users/all">Usuarios</a></li>
+		<li><a href="/test/new">Crear Examen</a></li>
                 {{end}}
-		{{ if .User.IsTeacher }}
+		{{ if .User.IsTeacher}}
 		<li><a href="/test/new">Crear Examen</a></li>
 		{{end}}
 		<li role="separator" class="divider"></li>
