--- a/appengine/users/tmpl/view.html
+++ b/appengine/users/tmpl/view.html
@@ -7,6 +7,7 @@
       <li role="presentation" ><a href="/users/all">Listar</a></li>
       <li role="presentation" ><a href="/users/new">Crear</a></li>
       <li role="presentation" class="active"><a href="/users/edit?id={{.Content.Id}}">Editar</a></li>
+      <li role="presentation" ><a href="/users/delete?id={{.Content.Id}}">Borrar</a></li>
     </ul>
   </div>
 </div>
