--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="/test/all">Chex</a>
+	  <a class="navbar-brand" href="/">Chex</a>
 	</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
