--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -66,9 +66,9 @@
 
 
     <div class="container" id="content">
-      <!--  <div class="page-header">
-	<h1>Chex <br><small>Gestor de test y examenes</small></h1>
-      </div>-->
+      <div class="row">
+	<div id="infoPanel" class="alert col-md-6 col-md-offset-3" role="alert">...</div>
+      </div>
       {{template "content" .}}
     </div>
 
