--- a/appengine/users/tmpl/list.html
+++ b/appengine/users/tmpl/list.html
@@ -5,16 +5,8 @@
   <div class="form-group col-md-6 col-md-offset-3">
     <form id="userListForm" method="post">
       <input type="text" class="form-control" name="Name" placeholder="..." value="Búsqueda">
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
-      <a href="#" class="label label-default">Etiqueta 2</a>
+      <div id="usersTags" class="panel label-panel">
+      </div>
     </form>
 
     <div class="panel col-md-6 col-md-offset-3">
