--- a/appengine/users/tmpl/list.html
+++ b/appengine/users/tmpl/list.html
@@ -1,6 +1,6 @@
 {{define "content"}}
 
-<div class="panel col-md-12">
+<div class="row col-md-12">
 
   <div class="form-group col-md-6 col-md-offset-3">
     <form id="userListForm" method="post">
@@ -9,7 +9,7 @@
       </div>
     </form>
 
-    <div class="panel col-md-6 col-md-offset-3">
+    <div id="usersListed" class="panel list-group">
     </div>
   </div>
 
