refactoring js code

--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -13,14 +13,7 @@
  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/chexapi.js"></script>
-    <script src="/js/chexbind.js"></script>
-    <script>
-     $(document).ready(function () {
-       $(".dropdown-toggle").dropdown();
-       chexInit()
-     })
-    </script>
+    <script src="/js/chex.js"></script>
 
   </head>
   <body>
