--- a/appengine/users/tmpl/list.html
+++ b/appengine/users/tmpl/list.html
@@ -2,14 +2,14 @@
 
 <div class="row col-md-12">
 
-  <div class="form-group col-md-6 col-md-offset-3">
+  <div id="usersList" class="form-group col-md-6 col-md-offset-3">
     <form id="userListForm" method="post">
       <input type="text" class="form-control" name="Name" placeholder="..." value="Búsqueda">
-      <div id="usersTags" class="panel label-panel">
+      <div class="panel label-panel tags">
       </div>
     </form>
 
-    <div id="usersListed" class="panel list-group">
+    <div class="panel list-group results">
     </div>
   </div>
 
