fix delete users and other stuff

--- a/appengine/users/tmpl/edit.html
+++ b/appengine/users/tmpl/edit.html
@@ -1,11 +1,9 @@
 {{define "content"}}
 
-
 <div class="form-group col-md-12">
   <div class="row col-md-12 ">
     <ul class="nav nav-pills text-right">
-      <li role="presentation" ><a href="/users/all">Listar</a></li>
-      <li role="presentation" class="active"><a href="/users/new">Crear</a></li>
+      <li role="presentation" class="active"><a href="/users/all" >Volver</a></li>
     </ul>
   </div>
 </div>
