--- a/appengine/users/tmpl/info.html
+++ b/appengine/users/tmpl/info.html
@@ -1,5 +1,13 @@
 {{define "content"}}
 
+<div class="form-group col-md-12">
+  <div class="row col-md-12 ">
+    <ul class="nav nav-pills text-right">
+      <li role="presentation" class="active"><a href="/users/all" >Volver</a></li>
+    </ul>
+  </div>
+</div>
+
 <div class="panel col-md-12">
   <p>{{.Content}}</p>
 </div>
