delete old /users/all

--- a/appengine/users/tmpl/view.html
+++ b/appengine/users/tmpl/view.html
@@ -15,6 +15,9 @@
   <h2>{{.Content.Name}}</h2>
 
   <p>Información de ese usuario</p>
+  
+  <p>Etiquetas:{{.Content.GetStringTags}}</p>
+  
 </div>
 
 {{end}}
