--- a/appengine/users/tmpl/view.html
+++ b/appengine/users/tmpl/view.html
@@ -11,13 +11,15 @@
 </div>
 
 
-<div class="panel col-md-12">
+<div class="panel col-md-6 col-md-offset-3">
   <h2>{{.Content.Name}}</h2>
+  <p><strong>Rol: </strong>{{.Content.GetStringRole}} </p>
+  <p><strong>Email: </strong>{{.Content.Mail}} </p>
+  <p><strong>Etiquetas: </strong></p>
+  {{range .Content.Tags}}
+    <span class="label label-default">{{.}}</span>
+  {{end}}
 
-  <p>Información de ese usuario</p>
-  
-  <p>Etiquetas:{{.Content.GetStringTags}}</p>
-  
 </div>
 
 {{end}}
