--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -52,7 +52,7 @@
             </li>
 	  </ul>
 
-	  <p class="navbar-text navbar-right">{{.User.Mail}}</p>
+	  <p class="navbar-text navbar-right"><a href="/users/me">{{.User.Mail}}</a></p>
 
 	</div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
