--- a/appengine/users/tmpl/edit.html
+++ b/appengine/users/tmpl/edit.html
@@ -34,19 +34,19 @@
 	<label>Rol</label>
 	<select class="form-control" id="Role" name="Role">
           {{if .Content.IsStudent}}
-	     <option value="3" selected>Estudiante</option>
+	  <option value="3" selected>Estudiante</option>
 	  {{else}}
-	     <option value="3">Estudiante</option>
+	  <option value="3">Estudiante</option>
           {{end}}
           {{if .Content.IsTeacher}}
-	     <option value="7" selected>Profesor</option>
+	  <option value="7" selected>Profesor</option>
 	  {{else}}
-	     <option value="7">Profesor</option>
+	  <option value="7">Profesor</option>
           {{end}}
 	  {{if .Content.IsAdmin}}
-	     <option value="15" selected>Administrador</option>
+	  <option value="15" selected>Administrador</option>
 	  {{else}}
-	     <option value="15">Administrador</option>
+	  <option value="15">Administrador</option>
           {{end}}
 	</select>
       </div>
@@ -65,5 +65,27 @@
       </div>
     </form>
   </div>
+
+{{if .ImportForm}}
+ 
+  <div class="form-group col-md-6 col-md-offset-3">
+    <hr>
+    <form id="userImportForm" enctype="multipart/form-data" action="/users/import" method="post">
+      <div class="form-group">
+	<label >Adjuntar un archivo</label>
+	<input type="file" name="importFile" />
+	<!--  <p class="help-block">Ejemplo de texto de ayuda.</p>-->
+      </div>
+
+      <div class="form-group text-right">
+	<button type="submit" id="userImportSubmit" class="btn btn-default">Importar</button>
+      </div>
+    </form> 
+  </div>
+{{end}}
+
+</div>
+
+
 
 {{end}}
