--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -35,7 +35,7 @@
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	  
 	  <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a href="#">Link</a></li>  -->
+            <li><a href="/users/me">{{.User.Mail}}</a></li>
             <li class="dropdown">
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
@@ -52,7 +52,6 @@
             </li>
 	  </ul>
 
-	  <p class="navbar-text navbar-right"><a href="/users/me">{{.User.Mail}}</a></p>
 
 	</div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
