--- a/appengine/questions/tmpl/list.html
+++ b/appengine/questions/tmpl/list.html
@@ -10,8 +10,8 @@
 
 <div class="row col-md-12">
 
-  <div id="questionsList" class="form-group col-md-6 col-md-offset-3">
-    <form id="questionsListForm" method="post">
+  <div id="questList" class="form-group col-md-6 col-md-offset-3">
+    <form id="questListForm" method="post">
       <input type="text" class="form-control" name="Name" placeholder="..." value="Búsqueda">
       <div class="panel label-panel tags">
       </div>
