--- a/appengine/questions/tmpl/view.html
+++ b/appengine/questions/tmpl/view.html
@@ -9,14 +9,28 @@
   </div>
 </div>
 
-
-<div class="panel col-md-6 col-md-offset-3">
-  <p>{{.Content.GetHTMLText}}</p>
-  <!--  
+<div class="panel label-panel col-md-6 col-md-offset-3">
+  <!-- Panel de etiquetas -->
+  <div class="row col-md-3">
   {{range .Content.Tags}}
     <span class="label label-default">{{.}}</span>
   {{end}}
--->
+  </div>
+
+  <!-- Panel de avisos de pregunta -->
+  <div class="row col-md-3 pull-right">
+    
+  {{if not .Content.Solution}}
+    <a href="" class="label label-danger">Sin Solución</a>
+  {{end}}
+  </div>
+
+</div>
+
+<div class="panel col-md-6 col-md-offset-3">
+  <p>{{.Content.GetHTMLText}}</p>
+  <hr>
+{{.Content.GetHTMLOptions}}
 </div>
 
 {{end}}
