--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -46,6 +46,7 @@
 		{{ if .User.IsTeacher}}
 		<li><a href="/questions/list">Preguntas</a></li>
 		{{end}}
+		<li><a href="/help">Ayuda</a></li>
 		<li role="separator" class="divider"></li>
 		<li><a href="/logout">Salir</a></li>
 	      </ul>
