improve html templates with bootstrap

--- a/app/tmpl/studentWelcome.html
+++ b/app/tmpl/studentWelcome.html
@@ -1,7 +1,11 @@
 {{define "content"}}
 
 <div class="container" id="content">
-  <h1>Bienvenido {{.User.Name}}</h1>
+  <div class="page-header ">
+    <h1 class="text-left">Bienvenido {{.User.Name}}</h1>
+    <div class="well well-sm entete"></div>
+  </div>
+
   <p>Eres un simple estudiante</p>
 </div>
 {{end}}
