--- a/appengine/questions/tmpl/view.html
+++ b/appengine/questions/tmpl/view.html
@@ -21,7 +21,7 @@
   <div class="row col-md-3 pull-right">
     
   {{if not .Content.Solution}}
-    <a href="" class="label label-danger">Sin Solución</a>
+    <a href="/help#no-solution" class="label label-danger">Sin Solución</a>
   {{end}}
   </div>
 
