--- a/app/tmpl/adminWelcome.html
+++ b/app/tmpl/adminWelcome.html
@@ -1,7 +1,12 @@
 {{define "content"}}
 
 <div class="container" id="content">
-  <h1>Bienvenido {{.User.Name}}</h1>
+
+  <div class="page-header ">
+    <h1 class="text-left">Bienvenido {{.User.Name}}</h1>
+    <div class="well well-sm entete"></div>
+  </div>
+
   <p>Eres Administrador</p>
 </div>
 {{end}}
