add sticky footer to template

--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/chex.css">
 
- 
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/chex.js"></script>
@@ -66,6 +66,10 @@
       {{template "content" .}}
     </div>
 
-
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted text-center"><small>Chex software. Beta version</small></p>
+      </div>
+    </footer>
   </body>
 </html>
