--- a/app/tmpl/help.html
+++ b/app/tmpl/help.html
@@ -1,6 +1,15 @@
 
 {{define "content"}}
 
+<div class="form-group col-md-12">
+  <div class="row col-md-12 ">
+    <ul class="nav nav-pills text-right">
+      <li role="presentation" class="active"><a href="#" onclick="window.history.back()" >Volver</a></li>
+    </ul>
+  </div>
+</div>
+
+
 <div class="container col-md-8 col-md-offset-2">
   <div class="page-header ">
     <h1 class="text-center">Ayuda</h1>
