working on tests ui

--- a/appengine/tests/tmpl/edit.html
+++ b/appengine/tests/tmpl/edit.html
@@ -34,7 +34,53 @@
 
       <div class="form-group">
 	<label>Ejercicios</label>
-	<div class="panel panel-default panel-selection">
+
+	
+	<div id="testSelectQuestionPanel" class="panel panel-default panel-selection">
+	  <!-- List of all question of this user to add them to a test -->
+	  <div class="panel label-panel tags">
+	    <a href="#" class="label label-default">Etiqueta 1</a>
+	    <a href="#" class="label label-default">Etiqueta 2</a>
+	    <a href="#" class="label label-default">Etiqueta 3</a>
+	  </div>
+	  
+	  <ul class="list-group">
+
+	    <li class="list-group-item">
+	      <div class="form-inline">
+		<input type="checkbox" class="form-control item-input-value"/>
+		<a href="" class="">Pregunta 1</a>
+	      </div>
+	    </li>
+
+	    <li class="list-group-item">
+	      <div class="form-inline">
+		<input type="checkbox" class="form-control item-input-value"/>
+		<a href="" class="">Pregunta 1</a>
+	      </div>
+	    </li>
+
+	    <li class="list-group-item">
+	      <div class="form-inline">
+		<input type="checkbox" class="form-control item-input-value"/>
+		<a href="" class="">Pregunta 1</a>
+	      </div>
+	    </li>
+
+	    <li class="list-group-item">
+	      <div class="form-inline">
+		<input type="checkbox" class="form-control item-input-value"/>
+		<a href="" class="">Pregunta 1</a>
+	      </div>
+	    </li>
+
+	  </ul>
+
+	</div>
+
+	<!-- List of selected question -->
+
+	<div id="testSelectedQuestionPanel" class="panel panel-default panel-selection">
 	  <ul class="list-group">
 	    <li class="list-group-item">
 	      <div class="form-inline">
