working on add question form, in new test ui

--- a/appengine/tests/tmpl/edit.html
+++ b/appengine/tests/tmpl/edit.html
@@ -36,155 +36,192 @@
 	<label>Ejercicios</label>
 
 	
-	<div id="testSelectQuestionPanel" class="panel panel-default panel-selection">
+	<div id="testSelectQuestionPanel" class="panel-selection">
 	  <!-- List of all question of this user to add them to a test -->
+	  <div class="panel panel-default panel-selection-main">
+	    
+	    <ul class="list-group results">
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <input type="checkbox" class="form-control item-input-value"/>
+		  <a href="" class="">Pregunta 1</a>
+		</div>
+	      </li>
+	    </ul>
+	  </div>
+	  <button type="button" id="addSelectedQuests" class="btn btn-default pull-right">Añadir</button>
 	  <div class="panel label-panel tags">
 	    <a href="#" class="label label-default">Etiqueta 1</a>
 	    <a href="#" class="label label-default">Etiqueta 2</a>
 	    <a href="#" class="label label-default">Etiqueta 3</a>
 	  </div>
-	  
-	  <ul class="list-group">
-
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<input type="checkbox" class="form-control item-input-value"/>
-		<a href="" class="">Pregunta 1</a>
-	      </div>
-	    </li>
-
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<input type="checkbox" class="form-control item-input-value"/>
-		<a href="" class="">Pregunta 1</a>
-	      </div>
-	    </li>
-
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<input type="checkbox" class="form-control item-input-value"/>
-		<a href="" class="">Pregunta 1</a>
-	      </div>
-	    </li>
-
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<input type="checkbox" class="form-control item-input-value"/>
-		<a href="" class="">Pregunta 1</a>
-	      </div>
-	    </li>
-
-	  </ul>
-
 	</div>
+	
 
 	<!-- List of selected question -->
 
-	<div id="testSelectedQuestionPanel" class="panel panel-default panel-selection">
-	  <ul class="list-group">
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	<div id="testSelectedQuestionPanel" class="panel-selection">
+	  <div class="panel panel-default panel-selection-main">
+	    <ul class="list-group">
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	    <li class="list-group-item">
-	      <div class="form-inline">
-		<a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		<input type="text" class="form-control item-input-value"/>
-		<input type="text" class="form-control item-input-value"/>
-		<a href="" class="item-link">Cras justo odio</a>
-	      </div>
-	    </li>
+	      <li class="list-group-item">
+		<div class="form-inline">
+		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
+		  <input type="text" class="form-control item-input-value"/>
+		  <input type="text" class="form-control item-input-value"/>
+		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+	      </li>
 
-	  </ul>
-	  <button type="button" id="addQuest" class="btn btn-default pull-right">Añadir</button>
+	    </ul>
+	  </div>
+	  <button type="button" id="addMoreQuests" class="btn btn-default pull-right">Añadir</button>
+	  <div class="vspace"></div>
 	</div>
-      </div>
+
+      </div><!-- end of exercises -->
+
+
+
+
 
       <div class="form-group">
 	<label>Usuarios permitidos</label>
