fix select questions to add them a test

--- a/appengine/tests/tmpl/edit.html
+++ b/appengine/tests/tmpl/edit.html
@@ -53,7 +53,7 @@
 	      
 	    </ul>
 	  </div>
-	  <button type="button" id="addSelectedQuests" class="btn btn-default pull-right">Añadir</button>
+	  <button type="button" id="cancelSelectedQuests" class="btn btn-default pull-right">Cancelar</button>
 	  <div class="panel label-panel tags">
 	  </div>
 	</div>
@@ -63,7 +63,7 @@
 
 	<div id="testSelectedQuestionPanel" class="panel-selection">
 	  <div class="panel panel-default panel-selection-main">
-	    <ul class="list-group">
+	    <ul class="list-group results">
 	      <!--  <li class="list-group-item">
 		<div class="form-inline">
 		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
@@ -75,7 +75,7 @@
 
 	    </ul>
 	  </div>
-	  <button type="button" id="addMoreQuests" class="btn btn-default pull-right">Añadir</button>
+	  <button type="button" id="addMoreQuests" class="btn btn-default pull-right">Más</button>
 	</div>
 
       </div><!-- end of exercises -->
