--- a/appengine/tests/tmpl/edit.html
+++ b/appengine/tests/tmpl/edit.html
@@ -13,7 +13,7 @@
 
 <div class="panel col-md-12">
 
-  <div class="form-group col-md-6 col-md-offset-3">
+  <div class="form-group col-md-8 col-md-offset-2">
     <form id="testEditForm" method="post">
       
       <div class="form-group">
@@ -43,10 +43,10 @@
 	    <ul class="list-group results">
 	      
 	      <!-- <li class="list-group-item">
-		<div class="form-inline">
-		  <input type="checkbox" class="form-control item-input-value"/>
-		  <a href="" class="">Pregunta 1</a>
-		</div>
+	      <div class="form-inline">
+	      <input type="checkbox" class="form-control item-input-value"/>
+	      <a href="" class="">Pregunta 1</a>
+	      </div>
 	      </li>  -->
 
 
@@ -64,12 +64,16 @@
 	<div id="testSelectedQuestionPanel" class="panel-selection">
 	  <div class="panel panel-default panel-selection-main">
 	    <ul class="list-group results">
-	      <!--  <li class="list-group-item">
-		<div class="form-inline">
+
+	      <!--  <li class="list-group-item col-md-12">
+		<div class="icons col-md-2 text-center">
+		  <input type="text" class="form-control item-input-value good-points"/>
+		  <input type="text" class="form-control item-input-value bad-points"/>
 		  <a href="" class="item-remove glyphicon glyphicon-remove"></a>
-		  <input type="text" class="form-control item-input-value"/>
-		  <input type="text" class="form-control item-input-value"/>
-		  <a href="" class="item-link">Cras justo odio</a>
+		</div>
+		<div class="text col-md-10">
+		  <a href="" class="item-link">Cras justo odioLorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor.
+		  </a>
 		</div>
 	      </li> -->
 
