working on admin dashboard

--- a/app/tmpl/adminWelcome.html
+++ b/app/tmpl/adminWelcome.html
@@ -7,6 +7,50 @@
     <div class="well well-sm entete"></div>
   </div>
 
-  <p>Eres Administrador</p>
+
+  <div class="panel panel-primary">
+    <div class="panel-heading panel-title">Usuarios</div>
+    <div class="panel-body">
+
+      <div class="row col-md-6">
+	<div id="usersList" class="well panel-selection">
+	  <div class="panel label-panel tags">
+	  </div>
+	  <div class="list-group results">
+	  </div>
+	</div>
+      </div>
+
+
+      <div class="row col-md-5 pull-right">
+	<ul class="list-group">
+	  <li class="list-group-item"><span class="value">0</span> Usuarios creados</li>
+	  <li class="list-group-item"><span class="value">0</span> Usuarios conectados</li>
+	</ul>
+      </div>
+
+
+
+    </div>
+  </div>
+
+  <div class="panel panel-primary">
+    <div class="panel-heading panel-title">Preguntas</div>
+    <div class="panel-body">
+
+
+    </div>
+  </div>
+
+  <div class="panel panel-primary">
+    <div class="panel-heading panel-title">Tests</div>
+    <div class="panel-body">
+
+      
+
+    </div>
+  </div>
+  
+  
 </div>
 {{end}}
