bind users and questions panel in test by class

--- a/appengine/tests/tmpl/edit.html
+++ b/appengine/tests/tmpl/edit.html
@@ -36,9 +36,9 @@
 	<label>Ejercicios</label>
 
 	
-	<div id="testSelectQuestionPanel" class="panel-selection">
+	<div id="testSelectQuestionPanel" class="panel-list panel-select-questions">
 	  <!-- List of all question of this user to add them to a test -->
-	  <div class="panel panel-default panel-selection-main">	    
+	  <div class="panel panel-default panel-list-main">	    
 	    <ul class="list-group results">
 
 
@@ -52,8 +52,8 @@
 
 	<!-- List of added question -->
 
-	<div id="testAddedQuestionPanel" class="panel-selection">
-	  <div class="panel panel-default panel-selection-main">
+	<div id="testAddedQuestionPanel" class="panel-list panel-questions-added">
+	  <div class="panel panel-default panel-list-main">
 	    <ul class="list-group results">
 
 
@@ -71,9 +71,9 @@
       <div class="form-group">
 	<label>Usuarios permitidos</label>
 
-	<div id="testSelectUserPanel" class="panel-selection">
+	<div id="testSelectUserPanel" class="panel-list panel-select-users">
 	  <!-- List of all question of this user to add them to a test -->
-	  <div class="panel panel-default panel-selection-main">
+	  <div class="panel panel-default panel-list-main">
 	    <ul class="list-group results">
 
 
@@ -85,8 +85,8 @@
 	  </div>
 	</div>
 
-	<div id="testAddedUserPanel" class="panel-selection">
-	  <div class="panel panel-default panel-selection-main">
+	<div id="testAddedUserPanel" class="panel-list panel-users-added">
+	  <div class="panel panel-default panel-list-main">
 	    <ul class="list-group results">
 	      
 	    </ul>
