split panellist into usersList and questionsList

--- a/appengine/tests/tmpl/edit.html
+++ b/appengine/tests/tmpl/edit.html
@@ -131,6 +131,8 @@
 </div>
 
 <script>
- panelList.init({addItemIcon:true,removeItemIcon:true})
+ //panelList.init({addItemIcon:true,removeItemIcon:true})
+ usersList.init({addItemIcon:true,removeItemIcon:true})
+ questionsList.init({addItemIcon:true,removeItemIcon:true})
 </script>
 {{end}}
