--- a/app/tmpl/adminWelcome.html
+++ b/app/tmpl/adminWelcome.html
@@ -1,29 +1,21 @@
 {{define "content"}}
 
 <div class="container" id="content">
-  <!--
-  <div class="page-header ">
-    <h1 class="text-left">Bienvenido {{.User.Name}}</h1>
-    <div class="well well-sm entete"></div>
-  </div>
-  -->
 
+  <!-- Users panel  -->
   <div class="panel panel-primary">
     <div class="panel-heading panel-title">Usuarios</div>
     <div class="panel-body">
 
       <div class="row col-md-6">
 	<div id="UserPanel" class="panel-list panel-select-users">
-	  
 	  <div class="panel panel-default panel-list-main">
 	    <ul class="list-group results">
-
 	    </ul>
 	  </div>
 	  <div class="panel label-panel tags">
 	  </div>
 	</div>
-
       </div>
 
 
@@ -33,15 +25,17 @@
 	  <li class="list-group-item"><span class="badge">0</span>Usuarios conectados</li>
 	</ul>
 
-	<div class="list-group">
-	  <a href="/users/new" class="list-group-item">Nuevo Usuario</a>
-	  <a href="#" id="deleteUsers" class="list-group-item">Borrar</a>
+	<div class="btn-group" role="group" aria-label="...">
+	  <a href="/users/new" class="btn btn-default">Nuevo</a>
+	  <button type="button" id="deleteUsers" class="btn btn-default">Borrar</button>
 	</div>
       </div>
 
     </div>
-  </div>
+  </div><!-- End users -->
 
+
+  <!-- Questions panel  -->
   <div class="panel panel-primary">
     <div class="panel-heading panel-title">Preguntas</div>
     <div class="panel-body">
@@ -50,6 +44,8 @@
     </div>
   </div>
 
+
+  <!-- Tests panel  -->
   <div class="panel panel-primary">
     <div class="panel-heading panel-title">Actividades</div>
     <div class="panel-body">
@@ -63,10 +59,10 @@
 </div>
 
 <script>
-  
- panelList.init()
-  $("#deleteUsers").on("click",function(){
-   console.log(panelList.getSelectedUsers())
+ 
+ usersList.init()
+ $("#deleteUsers").on("click",function(){
+   console.log(usersList.getSelectedUsers())
    
  })
 
